--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,8 +1,18 @@
 @import 'tailwindcss';
 
-body, html {
+* {
+  box-sizing: border-box;
+}
+
+html, body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
   background-color: #0a0a0a;
   overflow-x: hidden;
+}
+
+body {
+  overflow-y: auto;
 }
